--- a/.github/workflows/dev_kyusda-client.yml
+++ b/.github/workflows/dev_kyusda-client.yml
@@ -1,9 +1,11 @@
-name: Build and deploy React app to Azure Web App - kyusda-client
+name: Build React client app - kyusda-client (Dev)
 
 on:
   push:
     branches:
       - dev
+    paths:
+      - 'client/**'
   workflow_dispatch:
 
 jobs:
@@ -31,35 +33,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: react-client
-          path: client/dist # ✅ Changed from build to dist
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: react-client
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A3A9C4E516384A618DCF9A4FCDC93A12 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4DBD0980D82B4DA7B1C62730FE18A377 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F63111A8EC394AF5B779DB195F942ADD }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'kyusda-client'
-          slot-name: 'Production'
-          package: . # This is fine because the artifact contents will be extracted to root
+          path: client/dist
