--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -48,3 +48,22 @@ jobs:
           node-version: '20'
       - run: npm ci
       - run: npm run build
+
+  create-pr-to-staging:
+    name: Create PR to Staging
+    runs-on: ubuntu-latest
+    needs:
+      - build-client
+      - build-api
+      - build-sanity
+    steps:
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "CI: Auto PR from dev to staging"
+          base: staging
+          branch: dev
+          title: "CI: Auto PR from dev to staging"
+          body: |
+            This PR was automatically created after all CI builds passed on `dev`.
