--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -15,6 +15,8 @@ jobs:
         working-directory: ./client
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure a full repository checkout
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
@@ -29,6 +31,8 @@ jobs:
         working-directory: ./server
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure a full repository checkout
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
@@ -43,6 +47,8 @@ jobs:
         working-directory: ./backend_sanity
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Ensure a full repository checkout
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
