--- a/.github/workflows/staging_kyusda-client.yml
+++ b/.github/workflows/staging_kyusda-client.yml
@@ -1,4 +1,4 @@
-name: Deploy React Client to Azure Web App - kyusda-client
+name: Deploy React Client to Azure Web App - kyusda-client (Staging)
 
 on:
   push:
@@ -43,9 +43,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write
       contents: read
@@ -62,14 +59,14 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A3A9C4E516384A618DCF9A4FCDC93A12 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4DBD0980D82B4DA7B1C62730FE18A377 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F63111A8EC394AF5B779DB195F942ADD }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (Staging Slot)
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'kyusda-client'
-          slot-name: 'Production'
+          slot-name: 'staging'
           package: client_dist
