--- a/.github/workflows/staging_kyusda-sanity.yml
+++ b/.github/workflows/staging_kyusda-sanity.yml
@@ -1,4 +1,4 @@
-name: Deploy Sanity CMS to Azure Web App - kyusda-sanity
+name: Deploy Sanity CMS to Azure Web App - kyusda-sanity (Staging)
 
 on:
   push:
@@ -42,9 +42,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write
       contents: read
@@ -61,14 +58,14 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_8DC721899B8B4F12AADCB98EEE389186 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6E8689F74ABE47C0A1DB6EC885082DD7 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_34DA169816AD4B238D1C53F5CF0DFA0C }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (Staging Slot)
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'kyusda-sanity'
-          slot-name: 'Production'
+          slot-name: 'staging'
           package: sanity_dist
