--- a/.github/workflows/staging_kyusda-api.yml
+++ b/.github/workflows/staging_kyusda-api.yml
@@ -1,4 +1,4 @@
-name: Deploy Node.js API from /server to Azure Web App - kyusda-api
+name: Deploy Node.js API from /server to Azure Web App - kyusda-server (Staging)
 
 on:
   push:
@@ -45,9 +45,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write
       contents: read
@@ -64,14 +61,14 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E829956A197B42A1B38918A43E2E1ACC }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C4D628DED0524D8A8EDE8E216A1EE7CD }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_ABA91950E8404E0C887F832860C8DE60 }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App (Staging Slot)
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'kyusda-api'
-          slot-name: 'Production'
+          app-name: 'kyusda-server'
+          slot-name: 'staging'
           package: .
