--- a/.github/workflows/staging_ci.yml
+++ b/.github/workflows/staging_ci.yml
@@ -1,10 +1,10 @@
-name: CI - Build and Test All Projects
+name: CI/CD - Deploy and Promote to Main
 
 on:
   push:
-    branches: [dev]
+    branches: [staging]
   pull_request:
-    branches: [dev]
+    branches: [staging]
 
 jobs:
   # --- Client Build ---
@@ -52,32 +52,14 @@ jobs:
       - run: npm ci
       - run: npm run build
 
-  # --- Auto PR to Staging after All Builds Pass ---
-  create-pr-to-staging:
-    name: Create PR to Staging
+  # --- Deploy to Staging ---
+  deploy-staging:
+    name: Deploy to Azure Staging
     runs-on: ubuntu-latest
     needs:
       - build-client
       - build-api
       - build-sanity
-    steps:
-      - name: Create PR
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "CI: Auto PR from dev to staging"
-          base: staging
-          branch: dev
-          title: "CI: Auto PR from dev to staging"
-          body: |
-            This PR was automatically created after all CI builds passed on `dev`.
-
-  # --- Deploy to Staging (If PR from Dev to Staging is Merged) ---
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: create-pr-to-staging
-    if: github.event.pull_request.merged == 'true' # Only deploy after PR to Staging is merged
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -86,21 +68,23 @@ jobs:
         with:
           app-name: 'your-app-name'
           slot-name: 'staging'
-          package: './' # Change if needed
-          
-  # --- Auto PR to Main after Deployment to Staging ---
+          package: './'
+
+  # --- Auto PR to Main ---
   create-pr-to-main:
-    name: Create PR to Main from Staging
+    name: Create PR from Staging to Main
     runs-on: ubuntu-latest
     needs: deploy-staging
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Create PR to Main
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           commit-message: "CI: Auto PR from staging to main after deployment"
           base: main
           branch: staging
           title: "CI: Auto PR from staging to main"
           body: |
-            This PR was automatically created after the deployment to `staging` was successful.
+            This PR was automatically created after successful deployment to `staging`.
