--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"No tests yet\" && exit 0",
     "dev": "tsx watch server.ts",
-    "build": "tsc",
+    "build": "tsc && npm run copy-assets",
+    "copy-assets": "copyfiles mail/**/* dist/",
     "start": "node dist/server.js"
   },
   "author": "samuel kamotho",
@@ -47,6 +48,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
     "@types/validator": "^13.12.2",
+    "copyfiles": "^2.4.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.13",
     "tsx": "^4.19.3",
