--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -44,6 +45,7 @@
     "markdown-to-jsx": "^7.7.7",
     "mdb-react-ui-kit": "^5.1.0",
     "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.3",
     "react-bootstrap": "^2.10.10",
@@ -72,6 +74,7 @@
     "timeago.js": "^4.0.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
+    "xml2js": "^0.6.2",
     "yup": "^1.6.1"
   },
   "scripts": {
