--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "dependencies": {
     "@types/xml2js": "^0.4.14",
     "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "node-fetch": "^2.7.0",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.13"
   }
 }
