--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.4",
@@ -38,18 +39,19 @@
     "firebase": "^12.7.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
-    "jspdf": "^3.0.1",
+    "groq": "^5.7.0",
+    "jspdf": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "markdown-to-jsx": "^7.7.7",
     "mdb-react-ui-kit": "^5.1.0",
     "moment": "^2.30.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-big-calendar": "^1.19.3",
     "react-bootstrap": "^2.10.10",
     "react-confetti": "^6.4.0",
     "react-day-picker": "^9.8.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-loading-skeleton": "^3.5.0",
@@ -65,7 +67,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.89.2",
     "sonner": "^2.0.5",
-    "styled-components": "^5.3.11",
+    "styled-components": "^6.3.8",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
